package com.ecms.entity;

public enum AppointmentStatus {
    PENDING,
    CONFIRMED,
    WAITING,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}