@startuml UC24_ViewDoctorDashboard_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam backgroundColor white
skinparam roundcorner 5
skinparam class {
    BackgroundColor #f9f9f9
    ArrowColor #336699
    BorderColor #336699
}

class AppointmentController {
    + getDashboard(date: LocalDate, userDetails: UserDetails): ResponseEntity<ApiResponse<AppointmentDashboardResponse>>
    + getDoctorQueue(date: LocalDate, userDetails: UserDetails): ResponseEntity<ApiResponse<List<AppointmentResponse>>>
    + searchAppointments(keyword: String): ResponseEntity<ApiResponse<List<AppointmentResponse>>>
    + getById(id: Long): ResponseEntity<ApiResponse<AppointmentResponse>>
}

interface AppointmentService {
    + getDashboard(date: LocalDate, doctorId: Long): AppointmentDashboardResponse
    + getDoctorQueue(date: LocalDate, doctorId: Long): List<AppointmentResponse>
    + searchAppointments(keyword: String): List<AppointmentResponse>
    + getAppointmentById(id: Long): AppointmentResponse
}

class AppointmentServiceImpl {
    + getDashboard(date: LocalDate, doctorId: Long): AppointmentDashboardResponse
    + getDoctorQueue(date: LocalDate, doctorId: Long): List<AppointmentResponse>
    + searchAppointments(keyword: String): List<AppointmentResponse>
    + getAppointmentById(id: Long): AppointmentResponse
}

class AppointmentRepository {
    + findByDoctorIdAndStatusIn(doctorId: Long, statuses: List<String>): List<Appointment>
    + findByAppointmentDateAndDoctorIdOrderByAppointmentTimeAsc(date: LocalDate, doctorId: Long): List<Appointment>
    + searchAppointments(keyword: String): List<Appointment>
    + findById(id: Long): Appointment
}

class Appointment {
    - appointmentId: Long
    - status: AppointmentStatus
    - scheduledTime: LocalDateTime
    + getAppointmentId(): Long
    + getStatus(): AppointmentStatus
}

enum AppointmentStatus {
    PENDING
    CONFIRMED
    WAITING
    IN_PROGRESS
    COMPLETED
    CANCELLED
}

class Patient {
    - patientId: Long
    - fullName: String
    - dateOfBirth: LocalDate
    + getPatientId(): Long
    + getFullName(): String
}

class AppointmentDashboardResponse {
    - date: LocalDate
    - waitingQueue: List<AppointmentResponse>
    - inProgressQueue: List<AppointmentResponse>
}

class AppointmentResponse {
    - appointmentId: Long
    - patientName: String
    - scheduledTime: LocalDateTime
    - status: String
}

class ApiResponse<T> {
    - status: int
    - message: String
    - data: T
}

AppointmentController ..> AppointmentService : uses
AppointmentController ..> ApiResponse : creates
AppointmentService <|.. AppointmentServiceImpl : implements
AppointmentServiceImpl ..> AppointmentRepository : uses
AppointmentServiceImpl ..> AppointmentDashboardResponse : creates
AppointmentServiceImpl ..> AppointmentResponse : creates
AppointmentRepository ..> Appointment : manages

Appointment "1" -- "1" AppointmentStatus : uses >
Appointment "0..*" -- "1" Patient : belongs to >

@enduml
